{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 123,
  "lineage": "5c05eed3-2a5c-ae81-a7f8-29157b2ee9b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124966736:internet-gateway/igw-0b6e94085026fe3d7",
            "id": "igw-0b6e94085026fe3d7",
            "owner_id": "537124966736",
            "tags": {
              "Name": "MyInternetGateway"
            },
            "tags_all": {
              "Name": "MyInternetGateway"
            },
            "vpc_id": "vpc-0732b6054f3a7c889"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124966736:route-table/rtb-0bb3bcdc05039a399",
            "id": "rtb-0bb3bcdc05039a399",
            "owner_id": "537124966736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6e94085026fe3d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyRouteTable"
            },
            "tags_all": {
              "Name": "MyRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0732b6054f3a7c889"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02850adf10bff71b3",
            "route_table_id": "rtb-0bb3bcdc05039a399",
            "subnet_id": "subnet-053c3a4769c7d7cda"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.subnet_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8a9493678bd752",
            "route_table_id": "rtb-0bb3bcdc05039a399",
            "subnet_id": "subnet-001e4e2a58f6c9fec"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.subnet_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124966736:security-group/sg-0e5a18150a2cbfeaf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5a18150a2cbfeaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "186.55.4.76/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241103010210468600000001",
            "name_prefix": "terraform-",
            "owner_id": "537124966736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_SG"
            },
            "tags_all": {
              "Name": "RDS_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0732b6054f3a7c889"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124966736:subnet/subnet-053c3a4769c7d7cda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c3a4769c7d7cda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537124966736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MySubnetA"
            },
            "tags_all": {
              "Name": "MySubnetA"
            },
            "vpc_id": "vpc-0732b6054f3a7c889"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124966736:subnet/subnet-001e4e2a58f6c9fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e4e2a58f6c9fec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537124966736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MySubnetB"
            },
            "tags_all": {
              "Name": "MySubnetB"
            },
            "vpc_id": "vpc-0732b6054f3a7c889"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124966736:vpc/vpc-0732b6054f3a7c889",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2658d8c36f0d832",
            "default_route_table_id": "rtb-0719651be0958828a",
            "default_security_group_id": "sg-0f046dce6930d4a88",
            "dhcp_options_id": "dopt-06111437453614e14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0732b6054f3a7c889",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0719651be0958828a",
            "owner_id": "537124966736",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}